# tetron

./: Cargo.toml  README.md  notes.md
examples/breakout/game/: game.json
examples/breakout/game/src/: main.rhai  main.rn
examples/breakout/mod/: game.json
examples/hello-world/: game.json
examples/hello-world/src/: main.rn
src/: error.rs  lib.rs  lsp.rs  main.rs  overlayfs.rs
src/engine/: args.rs  behaviours.rs  drawable.rs  entity.rs  input.rs  mod.rs  scene.rs  shape.rs  systems.rs  transform.rs  world.rs
src/engine/behaviours/: mod.rs
src/engine/physics/: mod.rs  vec2.rs
src/fs/: disk_fs.rs  mod.rs  noop_fs.rs  overlay_fs.rs  zip_fs.rs
src/scripting/: game.rs  log.rs  math.rs  mod.rs  module_resolver.rs  physics.rs  source_loader.rs  utils.rs
src/scripting-old/: game.rs  log.rs  math.rs
src/scripting-old/kv/: mod.rs
src/scripting/kv/: config.rs  conversions.rs  flags.rs  mod.rs  utils.rs
src/sdl/: mod.rs
src/utils/: mod.rs  typed_value.rs
src/utils/typed_value/: mod.rs  schema.rs
