[package]
name = "tetron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
stupid-simple-kv = "0.2.5"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
rusqlite = "0.35.0"
sdl2 = { version = "0.37.0", features = [
    "gfx",
    "image",
    "ttf",
    "mixer",
    "use-pkgconfig",
] }
zip = "2.6.1"
